# Projetos React/eventplus/webapi.event+/bin/Release/net7.0/swagger.json
@@ -42,6 +42,15 @@
         "tags": [
           "ComentarioEvento"
         ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "id",
+            "type": "string",
+            "format": "uuid",
+            "collectionFormat": "multi"
+          }
+        ],
         "responses": {
           "200": {
             "description": "Success"
@@ -53,6 +62,15 @@
       "get": {
         "tags": [
           "ComentarioEvento"
+        ],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "id",
+            "type": "string",
+            "format": "uuid",
+            "collectionFormat": "multi"
+          }
         ],
         "responses": {
           "200": {
@@ -169,6 +187,19 @@
             }
           }
         ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/Evento/ListarAntigos": {
+      "get": {
+        "tags": [
+          "Evento"
+        ],
+        "summary": "Método responsável por listar eventos passados",
         "responses": {
           "200": {
             "description": "Success"
